Fix footer bar covering issue

--- a/source/css/_schemes/Mala/_footer.styl
+++ b/source/css/_schemes/Mala/_footer.styl
@@ -1,5 +1,4 @@
 .footer
-  position absolute
   bottom 0
 
 .theme-link
